Fixed some alignment issues

--- a/client/pages/style.css
+++ b/client/pages/style.css
@@ -143,7 +143,7 @@ p {
     bottom: 0;
     text-align: center;
     border: 0px;
-    padding: 15px 0 30px 0;
+    padding: 15px 0 5px 0;
     background-color: #f7f7f7;
     width: 100%;
     align-content:center;
